--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "bootstrap": "4.3.1",
     "immer": "2.1.3",
     "prop-types": "15.7.2",
-    "react": "16.8.4",
-    "react-dom": "16.8.4",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-redux": "6.0.1",
-    "react-router-dom": "5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-toastify": "4.5.2",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
@@ -73,8 +73,7 @@
     "extends": [
       "eslint:recommended",
       "plugin:react/recommended",
-      "plugin:import/errors",
-      "plugin:import/warnings",
+      "plugin:@typescript-eslint/recommended",
       "plugin:prettier/recommended"
     ],
     "parser": "@typescript-eslint/parser",
